--- a/Numpy.ipynb
+++ b/Numpy.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPS5xgXryN51f5lx/6ONkSg",
+      "authorship_tag": "ABX9TyP1GidE57hLZPL2baJQpyYx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1808,6 +1808,352 @@
           "execution_count": 87
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Boolean indexing\n",
+        "import numpy as np\n",
+        "a = np.random.randint(1,100,24).reshape(6,4)\n",
+        "a"
+      ],
+      "metadata": {
+        "id": "pXCgKAXEcizo",
+        "outputId": "02f26c2e-7db3-4db7-f1fa-e691d8bb420a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[76, 51, 75, 10],\n",
+              "       [84, 68, 72, 85],\n",
+              "       [14, 33, 46,  4],\n",
+              "       [20, 39, 45, 61],\n",
+              "       [ 7, 81, 41, 55],\n",
+              "       [66, 62, 86, 50]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 2
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a[~(a%7 == 0)]"
+      ],
+      "metadata": {
+        "id": "fHzCLSCCciwY",
+        "outputId": "980b97f6-686f-4a9f-fa23-3126ccf009c0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([76, 51, 75, 10, 68, 72, 85, 33, 46,  4, 20, 39, 45, 61, 81, 41, 55,\n",
+              "       66, 62, 86, 50])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 4
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "                              ** Broadcasting in NumPy**\n",
+        "\n",
+        "    Broadcasting describes how NumPy handles element-wise operations between\n",
+        "    \n",
+        "    arrays with different shapes in a memory-efficient way."
+      ],
+      "metadata": {
+        "id": "J5MYDO4WeXXI"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#same shape\n",
+        "a = np.arange(6).reshape(2,3)\n",
+        "b = np.arange(6,12).reshape(2,3)\n",
+        "print(a)\n",
+        "print(b)\n",
+        "print(a + b)"
+      ],
+      "metadata": {
+        "id": "tZrzQlDbciuP",
+        "outputId": "b608d27d-fafe-4e50-ec07-9fe062b601f6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[0 1 2]\n",
+            " [3 4 5]]\n",
+            "[[ 6  7  8]\n",
+            " [ 9 10 11]]\n",
+            "[[ 6  8 10]\n",
+            " [12 14 16]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# diff shape\n",
+        "a = np.arange(6).reshape(2,3)\n",
+        "b = np.arange(3).reshape(1,3)\n",
+        "print(a)\n",
+        "print(b)\n",
+        "print(a + b)"
+      ],
+      "metadata": {
+        "id": "PA4lnakgcira",
+        "outputId": "08f3a9cd-3fc9-4ea9-d371-c1809ca2850b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[0 1 2]\n",
+            " [3 4 5]]\n",
+            "[[0 1 2]]\n",
+            "[[0 2 4]\n",
+            " [3 5 7]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "** Basic Rule of Broadcasting:**\n",
+        "\n",
+        "When performing operations like a + b, NumPy compares their shapes starting from the trailing dimensions (i.e., from right to left) and applies these rules:\n",
+        "\n",
+        "If the shapes are equal, they are compatible.\n",
+        "\n",
+        "If one shape is 1 in a dimension, it can be broadcast to match the other shape.\n",
+        "\n",
+        "If the shapes are not compatible, NumPy raises a ValueError."
+      ],
+      "metadata": {
+        "id": "PD9qBKCuhMOp"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = np.arange(12).reshape(4,3)\n",
+        "b = np.arange(12).reshape(3,4)\n",
+        "print(a)\n",
+        "print(b)\n",
+        "print(a + b)"
+      ],
+      "metadata": {
+        "id": "raht5_edcios",
+        "outputId": "c9645893-226d-46c3-d434-cea23621dc3f",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 309
+        }
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[ 0  1  2]\n",
+            " [ 3  4  5]\n",
+            " [ 6  7  8]\n",
+            " [ 9 10 11]]\n",
+            "[[ 0  1  2  3]\n",
+            " [ 4  5  6  7]\n",
+            " [ 8  9 10 11]]\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "ValueError",
+          "evalue": "operands could not be broadcast together with shapes (4,3) (3,4) ",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-10-2325759086.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mb\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mb\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mValueError\u001b[0m: operands could not be broadcast together with shapes (4,3) (3,4) "
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = np.arange(12).reshape(4,3)\n",
+        "b = np.arange(3).reshape(1,3)\n",
+        "print(a)\n",
+        "print(b)\n",
+        "print(a + b)"
+      ],
+      "metadata": {
+        "id": "S_9uO0X1cimP",
+        "outputId": "86bae05c-6c91-4daf-a67d-688a3aa35091",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[ 0  1  2]\n",
+            " [ 3  4  5]\n",
+            " [ 6  7  8]\n",
+            " [ 9 10 11]]\n",
+            "[[0 1 2]]\n",
+            "[[ 0  2  4]\n",
+            " [ 3  5  7]\n",
+            " [ 6  8 10]\n",
+            " [ 9 11 13]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "WORKING WITH MATHEMATICAL FORMULAS"
+      ],
+      "metadata": {
+        "id": "-vqHwFbwlFBH"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = np.arange(10)\n",
+        "print(sum(a))"
+      ],
+      "metadata": {
+        "id": "QAKG42tecij4",
+        "outputId": "518da4cc-250a-4187-b009-be4d0913e8bc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "45\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#sigmoid\n",
+        "def sigmoid(array):\n",
+        "  return 1/(1 + np.exp(-(array)))\n",
+        "\n",
+        "a = np.arange(10)\n",
+        "sigmoid(a)"
+      ],
+      "metadata": {
+        "id": "YhNzL7MecihC",
+        "outputId": "d5582a31-5dc3-4e4d-e50f-89015f61e263",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([0.5       , 0.73105858, 0.88079708, 0.95257413, 0.98201379,\n",
+              "       0.99330715, 0.99752738, 0.99908895, 0.99966465, 0.99987661])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 18
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "twWJeQPWcieu"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "vDgQOcpOcicx"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "CzeQ0ly7ciaE"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "R6l7hlUvciXd"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "3trD82wgciVG"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
