--- a/Numpy.ipynb
+++ b/Numpy.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP1GidE57hLZPL2baJQpyYx",
+      "authorship_tag": "ABX9TyNHrdbNs2vxyuJNnw450aOQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1824,7 +1824,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1855,7 +1855,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1900,7 +1900,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1933,7 +1933,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1982,7 +1982,7 @@
           "height": 309
         }
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2026,7 +2026,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2067,7 +2067,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2095,7 +2095,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2112,45 +2112,166 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "#mean square error\n",
+        "import numpy as np\n",
+        "actual = np.random.randint(1,50,25)\n",
+        "predicted = np.random.randint(1,50,25)"
+      ],
       "metadata": {
         "id": "twWJeQPWcieu"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "actual"
+      ],
       "metadata": {
-        "id": "vDgQOcpOcicx"
+        "id": "vDgQOcpOcicx",
+        "outputId": "1d9705c8-cd2f-477b-8220-a8035c33a8bd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([37, 46,  6, 44,  7, 31,  9,  5,  5, 39, 23, 31, 24, 41, 42, 13, 39,\n",
+              "       45,  6, 35, 48,  9, 30, 48, 13])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 3
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "predicted"
+      ],
       "metadata": {
-        "id": "CzeQ0ly7ciaE"
+        "id": "CzeQ0ly7ciaE",
+        "outputId": "d54459f9-67a2-40cb-c406-748edb240550",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([14,  7, 28,  8,  2, 22, 37,  8, 11, 37, 42,  4, 17, 13, 40, 30, 16,\n",
+              "       25, 46, 41, 32, 40, 45, 47, 21])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 4
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "def mse(actual,predicted):\n",
+        "  return np.mean((actual - predicted)**2)\n",
+        "\n",
+        "mse(actual,predicted)"
+      ],
       "metadata": {
-        "id": "R6l7hlUvciXd"
+        "id": "R6l7hlUvciXd",
+        "outputId": "974961c0-4664-450e-ff82-7485030d7a3e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "np.float64(442.28)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# working with missing value\n",
+        "a = np.array([2,3,4,5,np.nan,9])\n",
+        "a"
+      ],
       "metadata": {
         "id": "3trD82wgciVG"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a[~np.isnan(a)]"
+      ],
+      "metadata": {
+        "id": "_50Rex4lXKx1"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "-Kigf_y-XKu0"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "3W7TN2dUXKrz"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "fJ1NcHRpXKpV"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "BZ_xAf4MXKnG"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "yglkhOOrXKkQ"
       },
       "execution_count": null,
       "outputs": []
