--- a/DSA Using Python.ipynb
+++ b/DSA Using Python.ipynb
@@ -26,7 +26,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -67,7 +67,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -103,7 +103,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -132,7 +132,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -169,25 +169,75 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "#Logarithmic\n",
+        "def intTostr():\n",
+        "  digits = '01234567890'\n",
+        "  if i == 0:\n",
+        "    return 0\n",
+        "  result = ''\n",
+        "  while i > 0:\n",
+        "    result = digits[i % 10] + result\n",
+        "    i = i // 10\n",
+        "  return result\n",
+        "\n",
+        "  print(intTostr(456))"
+      ],
       "metadata": {
         "id": "DRddrtpPiXPd"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "#Quadratic\n",
+        "l =[1,2,3,4,5]\n",
+        "for i in range(0,len(l)):\n",
+        "  for j in range(i+1,len(l)):\n",
+        "    print('({},{})'.format(i,j))"
+      ],
       "metadata": {
-        "id": "_x4De_geiXMt"
+        "id": "_x4De_geiXMt",
+        "outputId": "629823e5-c5fa-4d73-d6c6-954cb3016ae7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(0,1)\n",
+            "(0,2)\n",
+            "(0,3)\n",
+            "(0,4)\n",
+            "(1,2)\n",
+            "(1,3)\n",
+            "(1,4)\n",
+            "(2,3)\n",
+            "(2,4)\n",
+            "(3,4)\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "#O(n)\n",
+        "l =[1,2,3,4,5]\n",
+        "for i in range(0,len(l)//2):\n",
+        "  other = len(l) - i-1\n",
+        "  temp = l[i]\n",
+        "  l[i] = l[other]\n",
+        "  l[other] = temp\n",
+        "print(l)\n",
+        "\n"
+      ],
       "metadata": {
         "id": "rWTIjhGviXKT"
       },
@@ -196,18 +246,69 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "#recursion  linear(O(n))\n",
+        "def factorial(n):\n",
+        "  if n == 1:\n",
+        "    return 1\n",
+        "  else:\n",
+        "    return n * factorial(n-1)\n",
+        "print(factorial(6))"
+      ],
       "metadata": {
-        "id": "99_ZNP6QiXH8"
+        "id": "99_ZNP6QiXH8",
+        "outputId": "bada0cf2-c5a3-4efe-8772-92343566436c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "720\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Time Complexity:\n",
+        "#Exponential Time → O(2ⁿ)\n",
+        "def fib(n):\n",
+        "  if n == 1 or n == 0:\n",
+        "    return 1\n",
+        "  else:\n",
+        "    return  fib(n-1) + fib(n-2)\n",
+        "print(fib(5))"
+      ],
+      "metadata": {
+        "id": "5yZhOQ1_iXFa"
       },
       "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "def power(num):\n",
+        "  if num < 1:\n",
+        "    return 1\n",
+        "  elif num == 1:\n",
+        "    print(1)\n",
+        "    return 1\n",
+        "  else:\n",
+        "    prev = power(num//2)\n",
+        "    curr = prev*2\n",
+        "    print(curr)\n",
+        "    return curr\n",
+        "print(power(9))\n"
+      ],
       "metadata": {
-        "id": "5yZhOQ1_iXFa"
+        "id": "kFIdfL7QRtlB"
       },
       "execution_count": null,
       "outputs": []
