--- a/DSA Using Python.ipynb
+++ b/DSA Using Python.ipynb
@@ -186,7 +186,7 @@
       "metadata": {
         "id": "DRddrtpPiXPd"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -205,7 +205,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -262,7 +262,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -308,7 +308,139 @@
         "print(power(9))\n"
       ],
       "metadata": {
-        "id": "kFIdfL7QRtlB"
+        "id": "kFIdfL7QRtlB",
+        "outputId": "2f8c468c-d42f-4cdd-e91d-8991c71d3729",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "2\n",
+            "4\n",
+            "8\n",
+            "8\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def mod(a,b):\n",
+        "  if b <= 0:\n",
+        "    return -1\n",
+        "  div  = a//b\n",
+        "  return a - div * b\n",
+        "print(mod(10,4))"
+      ],
+      "metadata": {
+        "id": "PA6Xokjbz1BE",
+        "outputId": "ccf2ca6c-794a-4d12-aa5b-7918be2186ef",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def sum_digit(num):\n",
+        "  sum = 0\n",
+        "  while (num > 0):\n",
+        "    sum += num%10\n",
+        "    num/= 10\n",
+        "  return sum\n",
+        "print(sum_digit(345))"
+      ],
+      "metadata": {
+        "id": "xWjXvu7_1IQP",
+        "outputId": "fac79761-96c2-4e7b-a1da-d22e8ffd3792",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "13.33333333333333\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def power_set(nums):\n",
+        "  result = [[]]\n",
+        "  for num in nums:\n",
+        "    new_subsets = []\n",
+        "    for subsets in result:\n",
+        "      new_subsets.append(subsets + [num])\n",
+        "    result.extend(new_subsets)\n",
+        "  return result\n",
+        "nums = [2,3,4]\n",
+        "print(power_set(nums))"
+      ],
+      "metadata": {
+        "id": "Zad32Fb71IM4",
+        "outputId": "d9daa937-727c-450d-e073-60fd602b58fb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[], [2], [3], [2, 3], [4], [2, 4], [3, 4], [2, 3, 4]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "A4-3eucU1IK7"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "9S_BWtl41IIV"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "P-0fdsil1IFj"
       },
       "execution_count": null,
       "outputs": []
