--- a/DSA Using Python.ipynb
+++ b/DSA Using Python.ipynb
@@ -314,7 +314,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -346,7 +346,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -375,7 +375,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -407,7 +407,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -420,30 +420,90 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "import ctypes\n",
+        "class mylist:\n",
+        "  def __init__(self):\n",
+        "    self.size=1\n",
+        "    self.n=0\n",
+        "  def __len__(self):\n",
+        "    return self.n\n",
+        "  def append(self,item):\n",
+        "    if self.size == self.n:\n",
+        "      #resize\n",
+        "      self.__resize()\n",
+        "\n",
+        "    # create a C type array with size self.size\n",
+        "    self.A = self.__make_array(self.size)\n",
+        "  def __make_array(size,capacity):\n",
+        "    # create a C type array (static,referentail) with size capacity\n",
+        "    return (capacity * ctypes.py_object)()\n"
+      ],
       "metadata": {
         "id": "A4-3eucU1IK7"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "L = mylist()"
+      ],
       "metadata": {
         "id": "9S_BWtl41IIV"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "print(L)"
+      ],
       "metadata": {
-        "id": "P-0fdsil1IFj"
+        "id": "P-0fdsil1IFj",
+        "outputId": "31437e80-c312-4c25-bd7b-d43f1ed3ae8f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<__main__.mylist object at 0x7e56aa748c10>\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "len(L)"
+      ],
+      "metadata": {
+        "id": "UCxO4vNLI1R8",
+        "outputId": "bcf6f45e-e35c-4528-e8e7-03fa358b7662",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
     }
   ],
   "metadata": {
