--- a/DSA Using Python.ipynb
+++ b/DSA Using Python.ipynb
@@ -426,15 +426,63 @@
         "  def __init__(self):\n",
         "    self.size=1\n",
         "    self.n=0\n",
+        "     # create a C type array with size self.size\n",
+        "    self.A = self.__make_array(self.size)\n",
+        "\n",
         "  def __len__(self):\n",
         "    return self.n\n",
+        "\n",
+        "  def __getitem__(self,index):\n",
+        "    if 0 <= index < self.n:\n",
+        "      return self.A[index]\n",
+        "    else:\n",
+        "      raise IndexError('not in range')\n",
+        "\n",
+        "\n",
+        "  def __str__(self):\n",
+        "    result = ''\n",
+        "    for i in range(self.n):\n",
+        "      result = result + str(self.A[i]) + ','\n",
+        "\n",
+        "    return '[' + result[:-1] + ']'\n",
+        "\n",
         "  def append(self,item):\n",
         "    if self.size == self.n:\n",
         "      #resize\n",
-        "      self.__resize()\n",
+        "      self.__resize(self.size*2)\n",
+        "    #append\n",
+        "    self.A[self.n] = item\n",
+        "    self.n = self.n + 1\n",
+        "#Pop last item from List(A[i])\n",
+        "  def pop(self):\n",
+        "    if self.n == 0:\n",
+        "      return 'Empty List'\n",
+        "    else:\n",
+        "      print(self.A[self.n - 1])\n",
+        "      self.n = self.n - 1\n",
         "\n",
-        "    # create a C type array with size self.size\n",
-        "    self.A = self.__make_array(self.size)\n",
+        "  def clear(self):\n",
+        "    self.n = 0\n",
+        "    self.size = 1\n",
+        "\n",
+        "  def find(self,item):\n",
+        "    for i in range(self.n):\n",
+        "      if self.A[i] == item:\n",
+        "        return i\n",
+        "      else:\n",
+        "        raise Error('item not found')\n",
+        "\n",
+        "\n",
+        "  def __resize(self,new_capacity):\n",
+        "    # create a new array with new capacity\n",
+        "    B = self.__make_array(new_capacity)\n",
+        "    self.size = new_capacity\n",
+        "    #copy the content of A to B\n",
+        "    for i in range(self.n):\n",
+        "      B[i] = self.A[i]\n",
+        "    # reassign A\n",
+        "    self.A = B\n",
+        "\n",
         "  def __make_array(size,capacity):\n",
         "    # create a C type array (static,referentail) with size capacity\n",
         "    return (capacity * ctypes.py_object)()\n"
@@ -442,7 +490,7 @@
       "metadata": {
         "id": "A4-3eucU1IK7"
       },
-      "execution_count": 5,
+      "execution_count": 87,
       "outputs": []
     },
     {
@@ -453,7 +501,7 @@
       "metadata": {
         "id": "9S_BWtl41IIV"
       },
-      "execution_count": 6,
+      "execution_count": 80,
       "outputs": []
     },
     {
@@ -463,18 +511,18 @@
       ],
       "metadata": {
         "id": "P-0fdsil1IFj",
-        "outputId": "31437e80-c312-4c25-bd7b-d43f1ed3ae8f",
+        "outputId": "d9467205-cc68-47c1-cc92-a29b221ab471",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": 81,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "<__main__.mylist object at 0x7e56aa748c10>\n"
+            "[]\n"
           ]
         }
       ]
@@ -482,26 +530,199 @@
     {
       "cell_type": "code",
       "source": [
+        "L.append('hello')\n",
+        "L.append(8)\n",
+        "L.append(90)\n",
+        "L.append('kabira')\n",
+        "L.append('world')"
+      ],
+      "metadata": {
+        "id": "UCxO4vNLI1R8"
+      },
+      "execution_count": 82,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "len(L)"
       ],
       "metadata": {
-        "id": "UCxO4vNLI1R8",
-        "outputId": "bcf6f45e-e35c-4528-e8e7-03fa358b7662",
+        "id": "U1gTFJM5wahf",
+        "outputId": "e827f57e-7bfc-44b4-bc51-6585f0c66d2c",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 8,
+      "execution_count": 83,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0"
+              "5"
             ]
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 83
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(L)"
+      ],
+      "metadata": {
+        "id": "5MAVHiFB2HI0",
+        "outputId": "a15c0e9c-cc3f-4034-c0c0-c560aa3efdde",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 84,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[hello,8,90,kabira,world]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "L[2]"
+      ],
+      "metadata": {
+        "id": "jmAih4Nv2HFd",
+        "outputId": "e35c7bef-50ec-46ff-d1b2-ee66273f5c1b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 67,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "90"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 67
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "L[9]"
+      ],
+      "metadata": {
+        "id": "mog8HWio2HC_",
+        "outputId": "ee90e754-aa7b-49bd-d8cf-de6bd359d74b",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 273
+        }
+      },
+      "execution_count": 68,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "IndexError",
+          "evalue": "not in range",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-1741200573.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mL\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m9\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m/tmp/ipython-input-1545721751.py\u001b[0m in \u001b[0;36m__getitem__\u001b[0;34m(self, index)\u001b[0m\n\u001b[1;32m     14\u001b[0m       \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mA\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 16\u001b[0;31m       \u001b[0;32mraise\u001b[0m \u001b[0mIndexError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'not in range'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     17\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mIndexError\u001b[0m: not in range"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "L.pop()"
+      ],
+      "metadata": {
+        "id": "pt2sXpgI2HAx",
+        "outputId": "90661ae5-3494-4987-d08c-88c5af88bfb0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 77,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "world\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(L)"
+      ],
+      "metadata": {
+        "id": "2ppvQdhJ2G-P",
+        "outputId": "2df27c2d-d7d0-4532-aab4-e6a8ebd71b0b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 78,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[hello,8,90,kabira]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "L.clear()"
+      ],
+      "metadata": {
+        "id": "p5zG4WAm2G6N"
+      },
+      "execution_count": 85,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(L)"
+      ],
+      "metadata": {
+        "id": "2dbSETYHA0FU",
+        "outputId": "b41c16c3-0345-42cd-efc6-a3d9173d3498",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 86,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[]\n"
+          ]
         }
       ]
     }
